Changed project structure and refactored code

--- a/LanguageSimilarity/ModelLearning/nl_similarity_model_training.ipynb
+++ b/LanguageSimilarity/ModelLearning/nl_similarity_model_training.ipynb
@@ -267,7 +267,7 @@
     }
    },
    "cell_type": "code",
-   "source": "model = SentenceTransformer(\"paraphrase-multilingual-MiniLM-L12-v2\")",
+   "source": "",
    "id": "a7381abe16c59e37",
    "outputs": [],
    "execution_count": 3
@@ -287,10 +287,11 @@
     "    for _, row in df.iterrows()\n",
     "]\n",
     "\n",
+    "model = SentenceTransformer(\"paraphrase-multilingual-MiniLM-L12-v2\")\n",
     "train_dataloader = DataLoader(train_examples, shuffle=True, batch_size=16)\n",
     "train_loss = losses.CosineSimilarityLoss(model=model)\n",
     "\n",
-    "model.fit(train_objectives=[(train_dataloader, train_loss)], epochs=3, warmup_steps=100, show_progress_bar=True)"
+    "model.fit(train_objectives=[(train_dataloader, train_loss)], epochs=3, warmup_steps=100)"
    ],
    "id": "b9a0a642e452c1a4",
    "outputs": [
@@ -339,7 +340,7 @@
     }
    },
    "cell_type": "code",
-   "source": "model.save(\"../Models/fine_tuned_similarity_model\")",
+   "source": "model.save(\"Models/fine_tuned_similarity_model\")",
    "id": "fd3317f1f58d1460",
    "outputs": [],
    "execution_count": 5
